force-app/main/default/objects/Passenger__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>