force-app/main/default/objects/Passenger__c/fields/SeatNumber__c.field-meta.xml
<CustomField>
    <fullName>SeatNumber__c</fullName>
    <label>Seat Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>